# Apartment-Manager

./: README.md  app.py  database.py  pyproject.toml  seed.sql  utils.py
templates/: apartments.html  edit_apartment.html  edit_tenant.html  layout.html  new_apartment.html  new_tenant.html  signin.html  tenants.html
